de pagina's een beetje aangevuld met tekst en de javascript in orde gebracht.

--- a/home.html
+++ b/home.html
@@ -10,13 +10,25 @@
       <!-- The navigation bar -->
       <img src="template-truck-logo-cargo-delivery-260nw-763311859.jpg" id="logo" alt="">
       <div class="flex">
-         <a class="link" href="home.html"> <div id="1" class="context" >Home</div></a>
-          <a href="Deliveries.html"><div id="2" class="context">Deliveries</div></a>
-          <a href="Deliveries.html"><div id="3" class="context">About us</div></a>
-          <a href="Deliveries.html"><div id="4" class="context">Contact</div></a>
-         <a href="login.html"> <div id="5" class="context">Log in</div></a>
+         <a class="link" href="home.html"> <div id="1" class="context" ><li>Home</li></div></a>
+          <a href="Deliveries.html"><div id="2" class="context"><li>Deliveries</li></div></a>
+          <a href="Aboutus.html"><div id="3" class="context"><li>ABout Us</li></div></a>
+          <a href="Contact.html"><div id="4" class="context"><li>Contact</li></div></a>
+         <a href="login.html"> <div id="5" class="context"><li>Log in</li></div></a>
       </div>
 
+
+
+      <div>
+        <img src="" alt="">
+        <p>We are transport and Co. an delivery companion, our greatest goal is to achieve 24/7 a great customer service and a good quality for every client.<br>
+        </p>
+        <img src="" alt="">
+        <p>Each pakache will be delivered with a great quality of service and at the lowest prices to make our customers happy.</p>
+
+
+
+      </div>
       
 </body>
 </html>
