--- a/login.html
+++ b/login.html
@@ -13,9 +13,9 @@
     <div class="login">
         <h1>Login</h1>
         <form action="">
-            <input type="password" placeholder="password" required><br>
+            <input type="text" placeholder="naam" required><br>
             <br>
-            <input type="email" placeholder="email address" required><br>
+            <input type="password" placeholder="paswoord" required><br>
             <br>
             <button type="submit" id="submit" placeholder="button">log in </button>
         </form>
@@ -24,4 +24,6 @@
 </body>
 
 </html>
-<script></script>
+<script>
+    let button = document.getElementById("submit")
+</script>
