de styling van de site een beetje aangepast en de pagina's een beetje gevuld. en overbodigheden weggehaald.

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="home.css">
     <title>Document</title>
 </head>
 <body>
+    <img src="template-truck-logo-cargo-delivery-260nw-763311859.jpg" id="logo" alt="">
+      <div class="flex">
+         <a class="link" href="home.html"> <div id="1" class="context" ><li>Home</li></div></a>
+          <a href="Deliveries.html"><div id="2" class="context"><li>Deliveries</li></div></a>
+          <a href="Aboutus.html"><div id="3" class="context"><li>ABout Us</li></div></a>
+          <a href="Contact.html"><div id="4" class="context"><li>Contact</li></div></a>
+         <a href="login.html"> <div id="5" class="context"><li>Log in</li></div></a>
+      </div>
+
+
+      <div id="t1">
     <p>We are Transport & Co an Delivery company that is specialized to deliver you package 24/7. <br> Our team works day and night to reach our goals and show our customers that we do anything to make they happy.
+    <br>
+        <img src="a8775f68-ac30-47ea-bac7-2b5f4392efcc.jpeg" id="t2"alt="">
     </p>
+</div>
 </body>
 </html>
