--- a/Contact.html
+++ b/Contact.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="home.css">
     <title>Document</title>
 </head>
 <body>
-   <img src="" alt="">
-   
-   <img src="" alt="">
+    <img src="template-truck-logo-cargo-delivery-260nw-763311859.jpg" id="logo" alt="">
+      <div class="flex">
+         <a class="link" href="home.html"> <div id="1" class="context" ><li>Home</li></div></a>
+          <a href="Deliveries.html"><div id="2" class="context"><li>Deliveries</li></div></a>
+          <a href="Aboutus.html"><div id="3" class="context"><li>ABout Us</li></div></a>
+          <a href="Contact.html"><div id="4" class="context"><li>Contact</li></div></a>
+         <a href="login.html"> <div id="5" class="context"><li>Log in</li></div></a>
+      </div>
 
-   <img src="" alt="">
 
-   <img src="" alt="">
 
+
+      <div class= "contactphotos">
+   <img src="download (2).png"class="img" alt=": transport&Co"><p>: transport&co</p>
+   <br>
+
+   <img src="download (1).png"class="img" alt=": 0473416229"><p>: 0473416229</p>
+<br>
+   <img src="download.png" class="img" alt=": Transport&co.gmail.com"><p>: Transport&co.gmail.com</p>
+<br>
+   <img src="" alt="">
+</div>
 </body>
 </html>
